# TC01MonoRepo

./: .gitignore  README.md
backend/: main.py  test_main.py
backend/api/: main.py
backend/api/orders/delivery/: main.py
backend/api/orders/repository/: interface.py  localdb.py
backend/api/orders/usecase/: ucase.py
backend_golang/: application.go  go.mod  go.sum
backend_golang/api/: main.go
backend_golang/api/orders/: repository.go  usecase.go
backend_golang/api/orders/delivery/restful/: main.go  main_test.go
backend_golang/api/orders/repository/: local_db.go  local_db_test.go  repository_mock.go
backend_golang/api/orders/usecase/: ucase.go  ucase_test.go  usecase_mock.go
backend_golang/domain/models/: Order.go  Stock.go  Store.go
backend_golang/routing/: routing.go
backend_python/: pyproject.toml
backend_python/api/: routers.py
backend_python/api/orders/delivery/: main.py
backend_python/api/orders/repository/: interface.py  localdb.py  main.py
backend_python/api/orders/usecase/: interface.py  main.py
frontend/: jest.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/(views)/orders/: page.tsx
frontend/app/(views)/orders/__tests__/: page.test.tsx
frontend/app/(views)/orders/_components/: Content.tsx  useModule.hook.ts  utils.ts
frontend/app/(views)/orders/_components/__tests__/: process.test.ts
frontend/app/_components/_layout/: Providers.tsx
frontend/types/: Orders.ts
