[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alan Maldonado <business.alanm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
